# chat

./: Cargo.toml  README.md  test.rest
chat_server/: Cargo.toml
chat_server/fixtures/: encoding.pem
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
migrations/: 20250720204117_workspace.sql
notify_server/: Cargo.toml
notify_server/src/: lib.rs  sse.rs
