[package]
name = "chat_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true}
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
axum = { workspace = true }
axum-extra = { version = "0.10.1", features = ["typed-header"]}
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = "0.12.12"
serde = { workspace = true }
serde_json = "1.0.140"
serde_yaml = { workspace = true }
sqlx = { workspace = true}
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["compression-full", "trace"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = {version = "1.8.0", features = ["v7", "serde"]}

[dev-dependencies]
http-body-util = "0.1.1"
sqlx-db-tester = "0.6.0"
